--- a/Firmware.tex
+++ b/Firmware.tex
@@ -230,9 +230,12 @@ void SignalOut(void) {
     Die Delay-Funktion stellt die Compare-Einehit so ein, dass nach der gewünschten Pulsdauer des Ausgangs ein Interrupt hervorgerufen wird.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Objekterkennung}
+\section{Objekterkennung Lucas}
+Die Objekterkennung ist für den Hexacopter notwendig um eine zuverlässige Positionierung zu ermöglichen. Dazu werden bestimmte Objekte im Raum erkannt und als Orientierung
+genutzt oder es muss ihnen ausgewichen werden \bzw eine Kollision vermieden werden.
 
   \subsection{Technische Planung}
+  In der Planung war es wichtig einerseits die notwendige Rechenleistung gering zu halten, andererseits auch alle notwendigen Objekte erkennen zu können.
 
   \subsection{Umsetzung}
 
